--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
 #REACT_APP_API_URL=http://localhost:5001/api
-REACT_APP_API_URL=https://portfolio-backend-p23f.onrender.com
+REACT_APP_API_URL=https://portfolio-backend-p23f.onrender.com/api
